--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pnpm install && pnpm build"
+  command = "pnpm install && pnpm build && cp client/public/_redirects dist/public/_redirects"
   publish = "dist/public"
   functions = "netlify/functions"
 
